# pixel_pen

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md  build_web.sh  release.toml
.github/actions/ubuntu-packages/: action.yml
.github/workflows/: release.yml  rust.yml
docs/: index.html
src/: actions.rs  app.rs  brush.rs  cell_image.rs  cli.rs  color_operations.rs  colors.rs  coords.rs  document.rs  editing.rs  editor.rs  egui_extensions.rs  error.rs  image_io.rs  image_operations.rs  import.rs  lib.rs  line.rs  main.rs  mode.rs  mutation_monitor.rs  polygons.rs  scaling.rs  storage.rs  system.rs  texture.rs  tool.rs  ui.rs  update_area.rs  vic.rs  widgets.rs
src/coords/: bounds.rs  size.rs  transform.rs
src/image_io/: fluff.rs
src/io/: fluff.rs
src/tool/: brush.rs  grab.rs  import.rs  paint.rs  rectangle.rs  ui.rs
src/ui/: crosshair.rs  palette.rs  text.rs
src/vic/: char.rs  image.rs  palette.rs  registers.rs  serialization.rs
tools/: pixel_pen_to_native.py
