[package]
name = "pixel_pen"
version = "0.1.0"
authors = ["Martin Vilcans <martin@librador.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bimap = "0.6.0"
bincode = "1.3.2"
eframe = "0.10.0" # Gives us egui, epi and web+native backends
imgref = "1.7.1"
itertools = "0.10.0"
nfd = "0.0.4"
serde = { version = "1.0.124", features = ["derive"] }
structopt = "0.3.21"
thiserror = "1.0.24"
serde_json = "1.0.64"
hex = "0.4.3"

[features]
default = []
http = ["eframe/http"] # Enable if you want to do http requests

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]

# If you want to use the bleeding edge version of `egui`:
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# eframe = { path = "../egui/eframe" }
